--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 Admin Version 2
 
 
-Issue #1: <a href="pages-login.php>Login">The Login Page</a>
+Issue #1: <a href="pages-login.php">The Login Page</a>
+<ul>
+  <li> Remove the social media links</li>
+  <li> Remove the "Don't have an account?  Sign Up" link</li>
+  <li> Make sure the "Forgot pwd?" link works</li>
+</ul>
+
+Issue #2: <a href="pages-login.php>Login">The Recover Password Page</a>
