--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 Admin Version 2
-
-
+<br>
+<br>
+<div style="width:900px;margin:0 auto">
 Issue #1: <a href="pages-login.php">The Login Page</a>
 <ul>
   <li> Remove the social media links</li>
@@ -9,3 +10,4 @@ Issue #1: <a href="pages-login.php">The Login Page</a>
 </ul>
 
 Issue #2: <a href="pages-login.php>Login">The Recover Password Page</a>
+</div>
