--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 Admin Version 2
 <br>
 <br>
-<div style="width:900px;margin:0 auto">
+<div style="width:900px;margin:0 auto;display:flex">
+
+<div style="width:50%;padding:30px;">
 Issue #1: <a href="pages-login.php">The Login Page</a>
 <ul>
   <li> Remove the social media links</li>
   <li> Remove the "Don't have an account?  Sign Up" link</li>
   <li> Make sure the "Forgot pwd?" link works</li>
 </ul>
+</div>
 
+<div style="width:50%;padding:30px;">
 Issue #2: <a href="pages-login.php>Login">The Recover Password Page</a>
+</div>
 </div>
