--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 Admin Version 2
 <br>
 <br>
-<div style="width:900px;margin:0 auto;display:flex">
+<div style="width:900px;margin:0 auto;display:flex;flex-wrap:wrap;">
 
 <div style="width:50%;padding:30px;">
 Issue #1: <a href="pages-login.php">The Login Page</a>
