--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ Admin Version 2
 <br>
 <div style="width:900px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:space-between">
 
-<div style="width:50%;padding:30px;">
+<div style="padding:30px;">
 Issue #1: <a href="pages-login.php">The Login Page</a>
 <ul>
   <li> Remove the social media links</li>
@@ -12,7 +12,7 @@ Issue #1: <a href="pages-login.php">The Login Page</a>
 </ul>
 </div>
 
-<div style="width:50%;padding:30px;">
+<div style="padding:30px;">
 Issue #2: <a href="pages-login.php>Login">The Recover Password Page</a>
 </div>
 </div>
