--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Admin Version 2
+<div style="text-align:center;width:900px;margin:30px auto 0px auto;">Admin Version 2</div>
 <br>
 <br>
 <div style="width:900px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:space-between">
