--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <br>
 <div style="width:900px;margin:0 auto;display:flex;flex-wrap:wrap;justify-content:space-between">
 
-<div style="padding:30px;">
+<div style="padding:30px;border:1px solid #666666;margin:10px;">
 Issue #1: <a href="pages-login.php">The Login Page</a>
 <ul>
   <li> Remove the social media links</li>
