--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ Issue #1: <a href="pages-login.php">The Login Page</a>
 </div>
 
 <div style="padding:10px;border:1px solid #666666;margin:10px;border-radius:5px">
-Issue #2: <a href="pages-login.php>Login">The Recover Password Page</a>
+Issue #2: <a href="pages-login.php">The Recover Password Page</a>
+</div>
+
+<div style="padding:10px;border:1px solid #666666;margin:10px;border-radius:5px">
+Issue #3: <a href="home.php">The Home Page</a>
 </div>
 </div>
